force-app/main/default/objects/FSM_StatusTransition__mdt/FSM_StatusTransition__mdt.object-meta.xml
<CustomObject>
    <description>Custom metadata to hold the status transitions for each profile.
Created as part of User Story #SFS-167</description>
    <label>FSM Status Transition</label>
    <pluralLabel>FSM Status Transitions</pluralLabel>
</CustomObject>