force-app/main/default/objects/FSM_StatusTransition__mdt/fields/FSM_ProfileName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ProfileName__c</fullName>
    <description>Created as part of User Story #SFS-167</description>
    <label>Profile Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FSM Customer Community Plus User</fullName>
            </value>
            <value>
                <fullName>FSM Field Service Admin</fullName>
            </value>
            <value>
                <fullName>FSM Integration</fullName>
            </value>
            <value>
                <fullName>FSM Metering Field Worker</fullName>
            </value>
            <value>
                <fullName>FSM Non Infra Field Worker</fullName>
            </value>
            <value>
                <fullName>FSM Partner Community User</fullName>
            </value>
            <value>
                <fullName>FSM Standard Desktop User</fullName>
            </value>
            <value>
                <fullName>FSM System Administrator</fullName>
            </value>
            <value>
                <fullName>FSM Virtual User</fullName>
            </value>
            <value>
                <fullName>FSM Waste Network Field Worker</fullName>
            </value>
            <value>
                <fullName>FSM Water Networks &amp; DevServ Field Worker</fullName>
            </value>
            <value>
                <fullName>System Administrator</fullName>
            </value>
            <value>
                <fullName>FSM Site Worker</fullName>
            </value>
            <value>
                <fullName>FSM Virtual Metering</fullName>
            </value>
            <value>
                <fullName>FSM Virtual Infra</fullName>
            </value>
            <value>
                <fullName>FSM Waste Customer Community Plus User</fullName>
            </value>
            <value>
                <fullName>FSM Water &amp; DevServ Customer Community Plus User</fullName>
            </value>
            <value>
                <fullName>FSM Dev Services Field Worker</fullName>
                <isActive>false</isActive>
                <label>FSM Dev Services Field Worker</label>
            </value>
            <value>
                <fullName>FSM Non Infra Site Worker</fullName>
                <isActive>false</isActive>
                <label>FSM Non Infra Site Worker</label>
            </value>
            <value>
                <fullName>FSM Water Network Field Worker</fullName>
                <isActive>false</isActive>
                <label>FSM Water Network Field Worker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>