force-app/main/default/objects/FSM_StatusTransition__mdt/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>FSM_ProfileName__c</columns>
    <columns>FSM_CurrentStatus__c</columns>
    <columns>FSM_StatusToUpdate__c</columns>
    <filterScope>Everything</filterScope>
    <label>View</label>
</ListView>